--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,6 @@
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/barlow_font</item>
         <item name="android:windowBackground">@color/grey_200</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 </resources>
