--- a/app/src/main/res/layout/fragment_tooltip_editor.xml
+++ b/app/src/main/res/layout/fragment_tooltip_editor.xml
@@ -42,9 +42,13 @@
     <EditText
         android:id="@+id/tooltip_text_edit_text"
         android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:inputType="text"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="Input"
         app:layout_constraintTop_toBottomOf="@+id/tooltip_text_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -65,9 +69,15 @@
 
     <EditText
         android:id="@+id/text_size_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
+        app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toBottomOf="@+id/text_size_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -77,15 +87,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Padding"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/text_size_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
 
     <EditText
         android:id="@+id/padding_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/padding_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,16 +115,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Background Color"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/padding_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+         />
 
     <EditText
         android:id="@+id/background_color_edit_text"
         android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:inputType="text"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="Input"
         app:layout_constraintTop_toBottomOf="@+id/background_color_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -115,15 +143,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Text Color"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/background_color_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+         />
 
     <EditText
         android:id="@+id/text_color_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:inputType="text"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="Input"
         app:layout_constraintTop_toBottomOf="@+id/text_color_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -133,15 +171,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Corner Radius"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/text_color_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
 
     <EditText
         android:id="@+id/corner_radius_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/corner_radius_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,15 +199,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tooltip Width"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/corner_radius_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
 
     <EditText
         android:id="@+id/tooltip_width_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/tooltip_width_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -171,15 +227,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Arrow Width"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/tooltip_width_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+         />
 
     <EditText
         android:id="@+id/arrow_width_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/arrow_width_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,15 +255,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Arrow Height"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="7dp"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/arrow_width_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
 
     <EditText
         android:id="@+id/arrow_height_edit_text"
+        android:background="@drawable/edittext_bg"
+        android:layout_marginTop="7dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="5dp"
+        android:hint="3"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/arrow_height_label"
         app:layout_constraintStart_toStartOf="parent"
