Created adapter for EditText to avoid boiler plate code

--- a/app/src/main/res/layout/fragment_tooltip_editor.xml
+++ b/app/src/main/res/layout/fragment_tooltip_editor.xml
@@ -53,6 +53,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/textsize_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tooltip_text_edit_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:constraint_referenced_ids="text_size_label,text_size_edit_text" />
+
     <TextView
         android:id="@+id/text_size_label"
         android:layout_width="wrap_content"
@@ -64,7 +72,7 @@
         android:textStyle="normal"
         android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@+id/tooltip_text_edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/textsize_container"
         />
 
     <EditText
@@ -79,8 +87,16 @@
         android:inputType="number"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toBottomOf="@+id/text_size_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/textsize_container"
+        />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/padding_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/textsize_container"
+        app:layout_constraintRight_toRightOf="parent"
+        app:constraint_referenced_ids="padding_label,padding_edit_text" />
 
     <TextView
         android:id="@+id/padding_label"
@@ -92,8 +108,8 @@
         android:lineHeight="18sp"
         android:textStyle="normal"
         android:textFontWeight="500"
-        app:layout_constraintTop_toBottomOf="@+id/text_size_edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tooltip_text_edit_text"
+        app:layout_constraintStart_toStartOf="@id/padding_container"
         />
 
     <EditText
@@ -106,9 +122,10 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
+        app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toBottomOf="@+id/padding_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/padding_container"
+        />
 
     <TextView
         android:id="@+id/background_color_label"
