--- a/app/src/main/res/layout/fragment_tooltip_editor.xml
+++ b/app/src/main/res/layout/fragment_tooltip_editor.xml
@@ -335,8 +335,13 @@
         android:id="@+id/btnPrintData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Print Data"
-        android:layout_marginTop="16dp"
+        android:text="Render Tooltip"
+        android:textSize="14sp"
+        android:lineHeight="22sp"
+        android:layout_marginHorizontal="9dp"
+        android:layout_marginVertical="8dp"
+        android:backgroundTint="@color/render_button_color"
+        android:layout_marginTop="36dp"
         app:layout_constraintTop_toBottomOf="@+id/arrow_height_edit_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
