--- a/app/src/main/res/layout/fragment_renderer.xml
+++ b/app/src/main/res/layout/fragment_renderer.xml
@@ -1,13 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_Left_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button 1" />
+        android:text="Button 1"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
+        android:textColor="@color/black"
+        android:padding="8dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="22dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_right_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 2"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
+        android:textColor="@color/black"
+        android:padding="8dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="22dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <Button
+        android:id="@+id/button_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 3"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
+        android:textColor="@color/black"
+        android:padding="8dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="22dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <Button
+        android:id="@+id/button_left_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 4"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
+        android:textColor="@color/black"
+        android:padding="8dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="22dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <Button
+        android:id="@+id/button_right_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button 5"
+        android:textSize="16sp"
+        android:lineHeight="18sp"
+        android:textStyle="normal"
+        android:textFontWeight="500"
+        android:textColor="@color/black"
+        android:padding="8dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="22dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
