--- a/app/src/main/res/drawable/arrow_shape.xml
+++ b/app/src/main/res/drawable/arrow_shape.xml
@@ -1,4 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/black" />
-    <corners android:radius="2dp" />
-</shape>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M12,0L24,24H0L12,0Z" />
+
+</vector>
