--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -9,15 +9,14 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:layout_margin="8dp" />
+        android:padding="8dp" />
 
     <ImageView
         android:id="@+id/arrowView"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_below="@id/tooltipTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-8dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignTop="@id/tooltipTextView"
+        android:layout_marginStart="-12dp"
         android:src="@drawable/arrow_shape" />
 
 </RelativeLayout>
