Added logic to handle centering of arrow

--- a/app/src/main/res/drawable/arrow_shape.xml
+++ b/app/src/main/res/drawable/arrow_shape.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/purple_200"
         android:pathData="M12,0L24,24H0L12,0Z" />
 
 </vector>
