--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -1,22 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/tooltip_background">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tooltipTextView"
+    <RelativeLayout
+        android:id="@+id/tooltipContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:padding="8dp" />
+        android:background="@drawable/tooltip_background">
+
+        <TextView
+            android:id="@+id/tooltipTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:padding="8dp" />
+
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/arrowView"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignTop="@id/tooltipTextView"
         android:layout_marginStart="-12dp"
         android:src="@drawable/arrow_shape" />
 
-</RelativeLayout>
+</FrameLayout>
