--- a/app/src/main/res/layout/layout_test.xml
+++ b/app/src/main/res/layout/layout_test.xml
@@ -1,25 +1,28 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/rectangle1"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="#FF0000"
-        app:layout_constraintBottom_toTopOf="@id/rectangle2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <RelativeLayout
+        android:id="@+id/tooltipContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tooltip_background">
 
-    <View
-        android:id="@+id/rectangle2"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:background="#00FF00"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/tooltipTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:padding="8dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/arrowView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="-12dp"
+        android:src="@drawable/arrow_shape" />
+
+</FrameLayout>
