--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -23,6 +23,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="-12dp"
-        android:src="@drawable/arrow_shape" />
+        android:scaleType="fitXY"
+        android:background="@drawable/arrow_shape" />
 
 </FrameLayout>
