--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -5,8 +5,7 @@
     <RelativeLayout
         android:id="@+id/tooltipContainer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/tooltip_background">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tooltipTextView"
