Added dropdown arrow

--- a/app/src/main/res/layout/fragment_tooltip_editor.xml
+++ b/app/src/main/res/layout/fragment_tooltip_editor.xml
@@ -20,7 +20,7 @@
 
     <Spinner
         android:id="@+id/target_element_spinner"
-        android:background="@drawable/edittext_bg"
+        android:background="@drawable/spinner_background"
         android:layout_marginTop="7dp"
         android:layout_height="32dp"
         android:paddingHorizontal="12dp"
@@ -89,7 +89,7 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/text_size_label"
         app:layout_constraintStart_toStartOf="@id/textsize_container"
         />
@@ -110,6 +110,7 @@
         android:layout_marginTop="7dp"
         android:textSize="16sp"
         android:lineHeight="18sp"
+        android:layout_marginStart="17dp"
         android:textStyle="normal"
         android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@id/tooltip_text_edit_text"
@@ -126,7 +127,8 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        android:layout_marginStart="17dp"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/padding_label"
         app:layout_constraintStart_toStartOf="@id/padding_container"
         />
@@ -219,7 +221,7 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/corner_radius_label"
         app:layout_constraintStart_toStartOf="@id/corner_radius_container"
         />
@@ -243,6 +245,7 @@
         android:lineHeight="18sp"
         android:textStyle="normal"
         android:textFontWeight="500"
+        android:layout_marginStart="17dp"
         app:layout_constraintTop_toBottomOf="@+id/text_color_edit_text"
         app:layout_constraintStart_toStartOf="@id/width_container"
         />
@@ -257,7 +260,8 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        android:layout_marginStart="17dp"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/tooltip_width_label"
         app:layout_constraintStart_toStartOf="@id/width_container" />
 
@@ -293,7 +297,7 @@
         android:paddingVertical="5dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/arrow_width_label"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -311,6 +315,7 @@
         android:layout_height="wrap_content"
         android:text="Arrow Height"
         android:layout_marginTop="7dp"
+        android:layout_marginStart="17dp"
         android:textSize="16sp"
         android:lineHeight="18sp"
         android:textStyle="normal"
@@ -327,9 +332,10 @@
         android:layout_height="32dp"
         android:paddingHorizontal="12dp"
         android:paddingVertical="5dp"
+        android:layout_marginStart="17dp"
         android:hint="3"
         android:inputType="number"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.45"
         app:layout_constraintTop_toBottomOf="@+id/arrow_height_label"
         app:layout_constraintStart_toStartOf="@id/arrow_height_container"
         app:layout_constraintEnd_toEndOf="parent" />
