--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -7,13 +7,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:id="@+id/tooltip_inner_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+        <ImageView
+            android:id="@+id/tooltip_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
         <TextView
             android:id="@+id/tooltipTextView"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             android:padding="8dp" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
