--- a/app/src/main/res/layout/custom_tooltip_layout.xml
+++ b/app/src/main/res/layout/custom_tooltip_layout.xml
@@ -1,43 +1,49 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
-        android:id="@+id/tooltipContainer"
+    <data>
+    </data>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/tooltip_inner_container"
+        <RelativeLayout
+            android:id="@+id/tooltipContainer"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/tooltip_inner_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/tooltip_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    />
+
+                <TextView
+                    android:id="@+id/tooltipTextView"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:padding="8dp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <ImageView
-            android:id="@+id/tooltip_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:id="@+id/arrowView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="-12dp"
+            android:scaleType="fitXY" />
 
-        <TextView
-            android:id="@+id/tooltipTextView"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:padding="8dp" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/arrowView"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="-12dp"
-        android:scaleType="fitXY" />
-
-</FrameLayout>
+    </FrameLayout>
+</layout>
